--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^7.2.1",
     "autoprefixer": "^9.8.0",
     "framer-motion": "^1.11.0",
+    "laravel-echo": "^1.8.0",
     "postcss-cli": "^7.1.1",
+    "pusher": "^3.0.1",
+    "pusher-js": "^6.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
